abstract class Criterion {
  String criterionOperator;
  Criterion(this.criterionOperator);
}
